demo-apps/redis/kustomize/overlays/base/redis-insight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-insight
  labels:
    app: redis-insight
spec:
  selector:
    app: redis-insight
  ports:
    - name: http
      port: 5540
      targetPort: http
